// Database Protocol Buffers schema

syntax = "proto3";
package pb;

message Database {
    string name = 1;
    string description = 2;
    repeated Collection collections = 3;
    uint64 id_count = 4;
}

message Collection {
    string name = 1;
    repeated Document documents = 2;
}

message Document {
    enum DataType {
        DOCUMENTID = 0;
        INT32 = 1;
        INT64 = 2;
        DECIMAL = 3;
        BOOL = 4;
        TEXT = 5;
    }

    DataType id = 1;
    map<string, DataType> data = 2;
}
